# Wolf-Engine-2.0--3D-Editor

./: .gitignore  CMakeLists.txt  README.md  Wolf Engine 2.0 - 3D Editor.sln  msvc_build.bat  set_wolf_engine_symlink.bat  setup_wolf_engine.bat  shell.nix  snowy_sponza_README.md  voxelGI_README.md
BrowseToFile/: BrowseToFile.vcxproj  CMakeLists.txt  main.cpp
BrowseToFile/x64/Debug/: BrowseToFile.exe.recipe  vc143.idb
BrowseToFile/x64/Debug - No debug resource/: BrowseToFile.exe.recipe  vc143.idb
BrowseToFile/x64/Lib - Debug/: BrowseToFile.exe.recipe  vc143.idb
BrowseToFile/x64/Release/: BrowseToFile.exe.recipe
GifEncoder/: CMakeLists.txt  GifEncoder.vcxproj  GifEncoder.vcxproj.filters
Wolf Engine 2.0 - 3D Editor/: AnimatedMesh.cpp  AnimatedMesh.h  AnimatedModel.cpp  AnimatedModel.h  AnimationHelper.cpp  AnimationHelper.h  AssetCombinedImage.cpp  AssetCombinedImage.h  AssetExternalScene.cpp  AssetExternalScene.h  AssetId.h  AssetImage.cpp  AssetImage.h  AssetImageInterface.cpp  AssetImageInterface.h  AssetInterface.cpp  AssetInterface.h  AssetManager.cpp  AssetManager.h  AssetMaterial.cpp  AssetMaterial.h  AssetMesh.cpp  AssetMesh.h  AssetParticle.cpp  AssetParticle.h  AssetTextureSet.cpp  AssetTextureSet.h  BindlessDescriptor.cpp  BindlessDescriptor.h  BrowseToFile  BuildingModel.cpp  BuildingModel.h  CMakeLists.txt  CacheHelper.h  Camera.cpp  Camera.h  CameraSettingsComponent.cpp  CameraSettingsComponent.h  CascadedShadowMapsPass.cpp  CascadedShadowMapsPass.h  (+201 more)
Wolf Engine 2.0 - 3D Editor/Shaders/UI/: UI.frag
Wolf Engine 2.0 - 3D Editor/Shaders/buildings/: shader.vert
Wolf Engine 2.0 - 3D Editor/Shaders/cascadedShadowMapping/: computeShadows.glsl  shader.comp  shader_10996614109586495084_virtualTextureParsed.comp  shader_13566094403348386371Parsed.comp  shader_13566094403348386371_virtualTextureParsed.comp  shader_2743460234245883056Parsed.comp  shader_5540198871417278478Parsed.comp
Wolf Engine 2.0 - 3D Editor/Shaders/common/: colorSpaceTransformations.glsl  displayTypes.glsl
Wolf Engine 2.0 - 3D Editor/Shaders/composition/: shader.comp
Wolf Engine 2.0 - 3D Editor/Shaders/computeCubeMapFromSphericalMap/: shader.frag  shader.vert
Wolf Engine 2.0 - 3D Editor/Shaders/computeVertexData/: accumulateNormals.comp  averageColors.comp  averageNormals.comp  resetBuffers.comp  shader.comp
Wolf Engine 2.0 - 3D Editor/Shaders/computeVertexData/accumulateColors/: payloads.glsl  shader.rchit  shader.rgen  shader.rmiss
Wolf Engine 2.0 - 3D Editor/Shaders/contamination/: update.comp  updateParsed.comp  update_virtualTextureParsed.comp
Wolf Engine 2.0 - 3D Editor/Shaders/debug/: lines.frag  lines.vert  rectangle.frag  rectangle.vert  sphere.frag  sphere.tesc  sphere.tescParsed  sphere.tese  sphere.vert  sphereParsed.tesc  sphereParsed.tese  sphere_virtualTextureParsed.tesc  sphere_virtualTextureParsed.tese
Wolf Engine 2.0 - 3D Editor/Shaders/defaultAnimatedPipeline/: shader.frag  shader.vert
Wolf Engine 2.0 - 3D Editor/Shaders/defaultGlobalIrradiance/: readGlobalIrradiance.glsl
Wolf Engine 2.0 - 3D Editor/Shaders/defaultPipeline/: customRender.frag  outputIds.frag  shader.frag  shader.vert
Wolf Engine 2.0 - 3D Editor/Shaders/drawSkyBox/: shader.frag  shader.vert
Wolf Engine 2.0 - 3D Editor/Shaders/gasCylinder/: shader.frag
Wolf Engine 2.0 - 3D Editor/Shaders/materialFetchProcedures/: contaminationReceiver.glsl
Wolf Engine 2.0 - 3D Editor/Shaders/particles/: particleBuffer.glsl  render.frag  render.vert  update.comp  updateParsed.comp  update_virtualTextureParsed.comp
Wolf Engine 2.0 - 3D Editor/Shaders/pathTracing/: shader.rchit  shader.rgen  shader.rmiss
Wolf Engine 2.0 - 3D Editor/Shaders/rayTracedShadows/: computePenumbraScale.comp  computeShadows.glsl  debug.comp  debugParsed.comp  denoiseBlur.comp  denoising.glsl  shader.rchit  shader.rgen  shader.rmiss
Wolf Engine 2.0 - 3D Editor/Shaders/rayTracedWorld/: rayGen.glsl
Wolf Engine 2.0 - 3D Editor/Shaders/rayTracedWorldDebug/: shader.rchit  shader.rgen  shader.rmiss
Wolf Engine 2.0 - 3D Editor/Shaders/surfaceCoating/: resources.glsl  shader.frag  shader.geom  shader.tesc  shader.tese  shader.vert  shaderParsed.geom  shaderParsed.tesc  shaderParsed.tese  shader_NO_LIGHTINGParsed.geom  shader_NO_LIGHTINGParsed.tesc  shader_NO_LIGHTINGParsed.tese  shader_NO_LIGHTING_virtualTextureParsed.geom  shader_NO_LIGHTING_virtualTextureParsed.tesc  shader_virtualTextureParsed.geom  shader_virtualTextureParsed.tesc  shader_virtualTextureParsed.tese
Wolf Engine 2.0 - 3D Editor/Shaders/surfaceCoatingDataPreparation/: shader.comp
Wolf Engine 2.0 - 3D Editor/Shaders/thumbnailsGeneration/: animatedShader.vert  defaultShader.frag  defaultShader.vert  staticShader.vert
Wolf Engine 2.0 - 3D Editor/Shaders/voxelGI/debug/: debug.frag  debug.vert
Wolf Engine 2.0 - 3D Editor/Shaders/voxelGI/gridUpdate/: payloads.glsl  shader.rchit  shader.rgen  shader.rmiss  (+2 more)
Wolf Engine 2.0 - 3D Editor/Textures/no_texture_albedo.png_bin/: info.txt
Wolf Engine 2.0 - 3D Editor/Textures/white_pixel.jpg_bin/: info.txt
Wolf Engine 2.0 - 3D Editor/UI/: UI.html  fakeEngine.js  paramsEdition.js  select.js  slider.js  style.css
Wolf Engine 2.0 - 3D Editor/UI/curveEditor/: curveEditor.js  standaloneTest.html
Wolf Engine 2.0 - 3D Editor/config/: config.ini  configGraphicTests.ini  editor.ini  editorAnimationsGraphicTest.ini  editorParticlesGraphicTest.ini  editorSponzaGraphicTest.ini
Wolf Engine 2.0 - 3D Editor/default/: cookie.jar.db-shm
Wolf Engine 2.0 - 3D Editor/reports/viewer/: script.js  style.css  vramTrackingViewer.html
Wolf Engine 2.0 - 3D Editor/x64/Debug/: Wolf Engine 2.0 - 3D Editor.exe.recipe  buildingmodel.obj.enc  editormodelinterface.obj.enc  editorparams.obj.enc  editortypes.obj.enc  forwardpass.obj.enc  gascylindercomponent.obj.enc  playercomponent.obj.enc  skylight.obj.enc  systemmanager.obj.enc  vc143.idb
Wolf Engine 2.0 - 3D Editor/x64/Debug - No debug resource/: Wolf Engine 2.0 - 3D Editor.exe.recipe  vc143.idb
Wolf Engine 2.0 - 3D Editor/x64/Release/: Wolf Engine 2.0 - 3D Editor.exe.recipe
(+1 files in other folders)
